--- a/nouri/assets/theme.scss.liquid
+++ b/nouri/assets/theme.scss.liquid
@@ -8161,10 +8161,12 @@ img.hover-shadow {
         margin-bottom: 2rem;
     }
     .slick-slider--quotes {
-        display: flex;
-        align-items: center;
+        @include media-query($medium-up) {
+            display: flex;
+            align-items: center;
+        }
         .slick-slider--quote {
-            padding: 0 1rem;
+            padding: 0 3rem;
             text-align: center;
             @include media-query($medium-up) {
                 padding: 0 7rem;
@@ -8173,7 +8175,7 @@ img.hover-shadow {
         .slick-arrow {
             cursor: pointer;
             @include media-query($small) {
-                padding: 0 1rem
+                display: none !important;
             }
         }
     }
@@ -9037,6 +9039,10 @@ $site-header-wrapper-color: rgba($color-header, 0);
   .announcement-bar-image {
     max-width: 100px;
     margin-bottom: -5px;
+    @include media-query($small) {
+        max-width: 78px;
+        margin-bottom: -3px;
+    }
   }
 }
 
@@ -9052,6 +9058,7 @@ $site-header-wrapper-color: rgba($color-header, 0);
 
   @include media-query($small) {
     padding: 8px calc(#{$gutter} + 30px);
+    font-size: 13px;
   }
 
   .icon {
